<resources>
    <string name="app_name">TaskrCaseManagement</string>
    <string name="title">Title</string>
    <string name="state">State</string>
    <string name="description">Description</string>
    <string name="team_details">Team Details</string>
    <string name="log_out">Logout</string>
    <string name="search_bar">Search</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btn_edit_workitem">Edit workitem</string>
    <string name="action_add_workitem">Add workitem</string>
    <string name="all_workItems_by_teamId">Team overview</string>
    <string name="assignee">assignee</string>
    <string name="add_workitem_button">Add</string>
    <string name="slogan">Manage your work</string>
    <string name="add_member">+ Add user</string>
    <string name="update">Update</string>
    <string name="workitem_assigned_user">Assigned user</string>
    <string name="workitem_status">Status</string>
    <string name="unstarted">unstarted</string>
    <string name="started">started</string>
    <string name="done">done</string>
    <string name="my_items">my items</string>
    <string name="teamname">Team</string>
    <string name="users">Users</string>
    <string name="task">Task</string>
    <string name="r">r</string>
    <string name="search_hint">Search</string>
    <string name="enter_title_here">Enter title here!</string>
    <string name="search">Search</string>
    <string-array name="workitem_status">
        <item>Unstarted</item>
        <item>Started</item>
        <item>Done</item>
        <item>Archived</item>
    </string-array>
</resources>

